# AppTest

./: .gitignore  README.md  code_statistics.md
accounting-backend/: pyproject.toml
accounting-backend/src/app/: auth.py  database.py  main.py  models.py
accounting-frontend/: .env  index.html  package-lock.json  package.json
accounting-frontend/src/: App.tsx
accounting-frontend/src/lib/: api.ts
accounting-frontend/src/pages/: DashboardPage.tsx  LoginPage.tsx  RegisterPage.tsx
