[project]
name = "app"
version = "0.1.0"
description = ""
authors = [
    {name = "Devin AI",email = "158243242+devin-ai-integration[bot]@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4"
dependencies = [
    "fastapi[standard] (>=0.119.0,<0.120.0)",
    "psycopg[binary] (>=3.2.10,<4.0.0)",
    "python-jose[cryptography] (>=3.5.0,<4.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "reportlab (>=4.4.4,<5.0.0)"
]

[tool.poetry]
packages = [{include = "app", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
